--- a/src/index.html
+++ b/src/index.html
@@ -5,49 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <title>Probando pull request</title>
+  <title>woman__Coding</title>
 </head>
 <body id="container">
-  <main class="main-login">
-    <figure class="figure-login">
-      <img src="./img/undraw_Work_time_re_hdyv.svg" alt="">
-    </figure>
-    <form action="" class="col" id="col-form">
-      <div class="text-welcome">
-      <figure class="img-login">
-        <img class="userPic" src="./img/undraw_female_avatar_w3jk.svg" alt="userPic">
-      </figure>
-        <H1 class="logo">W__coding</H1>
-        <p class="text-logo">¡Welcome coder!</p>
-    </div>
-      <div class="form">
-        <div class="label">
-          <span class="material-icons">person</span>
-          <label class="flex" for="email"><h4>Email</h4>
-            <input class="" type="text">
-          </label>
-        </div>
-        <div class="label">
-          <span class="material-icons">
-            vpn_key
-            </span>
-          <label class="flex" for="email"><h4>Password</h4>
-            <input class="" type="text">
-          </label>
-        </div>
-        <a href="#/Registre">Are you new? sing me</a>
-        <button type="button"><a href="#/Home">Log In</a></button>
-      </div>
-      <div class="typeLog">
-        <p>or enter with</p>
-        <figure>
-          <img src="./img/google-plus.svg" alt="">
-          <img src="./img/facebook.svg" alt="">
-        </figure>
-      </div>
-    </form>    
+  <main class="main-login" id="main-login">
+    
   </main>
-  <script type="module" src="main.js"></script>
 </body>
+ <script type="module" src="main.js"></script>
 </html>
