--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,12 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyCRfc-eWKpUS3fTv1aik-GoQYVDPi17iho",
-    authDomain: "redsocial-b2010.firebaseapp.com",
-    projectId: "redsocial-b2010",
-    storageBucket: "redsocial-b2010.appspot.com",
-    messagingSenderId: "562829868568",
-    appId: "1:562829868568:web:927c45b160649a2d2d8d6d"
+    apiKey: "bbbbbbbbbbbbo",
+    authDomain: "bbbbbbbbbbbm",
+    projectId: "bbbbbbbbbbbb0",
+    storageBucket: "bbbbbbbbbbbbbbm",
+    messagingSenderId: "bbbbbbbbbbbb",
+    appId: "1bbbbbbbbbbbbbbbbbbbd"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
