--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,28 @@
   <main class="main-login" id="main-login">
     
   </main>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCRfc-eWKpUS3fTv1aik-GoQYVDPi17iho",
+    authDomain: "redsocial-b2010.firebaseapp.com",
+    projectId: "redsocial-b2010",
+    storageBucket: "redsocial-b2010.appspot.com",
+    messagingSenderId: "562829868568",
+    appId: "1:562829868568:web:927c45b160649a2d2d8d6d"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const fs = firebase.firestore();
+</script>
 </body>
  <script type="module" src="main.js"></script>
 </html>
