se crea script config

--- a/src/index.html
+++ b/src/index.html
@@ -21,16 +21,11 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    msg: "No robes credenciales!!"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
   const fs = firebase.firestore();
 </script>
 </body>
 </script>
+<script  src="configFirebase.js"></script>
  <script type="module" src="main.js"></script>
 </html>
