se mejoran estilos del modal

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <main class="main-login" id="main-login"></main>
 
     <div id="modal-mode" class="hide">
-      <div id="modal-window" class="hide"></div>
+      <div id="modal-window" ></div>
     </div>
   </body>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
