--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,7 @@
     <link rel="stylesheet" href="./style.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <title>woman__Coding</title>
   </head>
   <body id="container">
@@ -18,21 +15,10 @@
     <div id="modal-mode" class="hide">
       <div id="modal-window" ></div>
     </div>
+    
+    <script type="module" src="main.js"></script>
   </body>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-     <script  src="configFirebase.js"></script>
-
-<script>
-  const auth = firebase.auth();
-  const fs = firebase.firestore();
-</script>
-</body>
-</script>
- <script type="module" src="main.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-auth.js"></script>
 </html>
