--- a/src/index.html
+++ b/src/index.html
@@ -21,4 +21,5 @@
   <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-auth.js"></script>
+  <script src="./configFirebase.js"></script>
 </html>
